# aurgh

./: .clang-format  .clangd  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  aurgh.gresources.xml  compile_commands.json  compile_flags.txt  config.hh  config.json  config.jsonc  log.txt  meson.build  meson_options.txt  required-gtk4.txt  required.txt  resources.xml
.cache/clangd/index/: arg_parser.cc.569DF2A94E51FB55.idx  arg_parser.hh.159E5BD29A95B818.idx  aur_client.cc.D45CEBC039423C8E.idx  aur_client.hh.15360DC1BF968D20.idx  logger.cc.AFA5B2C952150840.idx  logger.hh.E1E59DD36962FED2.idx  main.cc.187053823AF2695C.idx  packages.cc.204B125FAB5DAF52.idx  packages.hh.114DBB4EB839DAE4.idx  utils.cc.6BFEAA9F17CD1DFA.idx  utils.hh.FACEECA9F8D69D5B.idx  window.cc.1617C133E15A9A88.idx  window.hh.1A7BE08C621D9F59.idx
.github/: deps.txt
.github/workflows/: CI.yml  check_build.yml  gtk3_build.yml  gtk4_build.yml
.zed/: settings.json
assets/: aurgh.desktop  required-gtk3.txt  required-gtk4.txt  run_aurgh.sh
data/: style.css  window.xml
data/tabs/: aur.xml
helper/: meson.build
helper/include/: remove.hh
helper/src/: main.cc  remove.cc
include/: aliases.hh  arg_parser.hh  aur_client.hh  config.hh  error.hh  git.hh  ini.hh  log.hh  logger.hh  package.hh  process.hh  result.hh  types.hh  utils.hh  versions.hh  window.hh
include/alpm/: config.hh  handle.hh
include/app/: app.hh  base_tab.hh  config.hh  data.hh  dialog.hh  logger.hh  package.hh  sidebar.hh  tab.hh  types.hh  utils.hh  widget_ptr.hh
include/app/package/: card.hh  client.hh  tab.hh  type.hh
include/app/sidebar/: item.hh  widget.hh
include/app/tabs/: aur.hh  card.hh
include/cli/: alpm.hh  cli.hh  log.hh
include/frontend/: aur.hh  client.hh  git.hh  window.hh
include/frontend/widgets/: searchbar.hh
include/http/: client.hh  transfer.hh
include/package/: card.hh  tab.hh  type.hh
include/shared/: arg_parser.hh  package.hh  result.hh  utils.hh
include/shared/alpm/: async.hh  handle.hh
include/tabs/: packages.hh
include/widgets/: base.hh  searchbar.hh
source/aurgh/: meson.build
source/aurgh/include/: arg_parser.hh  aur_client.hh  config.hh  utils.hh
source/aurgh/include/package/: card.hh  tab.hh  type.hh
source/aurgh/src/: arg_parser.cc  aur_client.cc  config.cc  logger.cc  main.cc  process.cc  utils.cc
source/aurgh/src/package/: card.cc  tab.cc
source/helper/: meson.build
source/helper/include/: alpm.hh  log.hh
source/helper/src/: alpm.cc  main.cc
source/shared/: meson.build
source/shared/include/: arg_parser.hh  utils.hh
source/shared/src/: arg_parser.cc  utils.cc
src/: arg_parser.cc  aur.cc  aur_client.cc  config.cc  git.cc  log.cc  logger.cc  main.cc  meson.build  package.cc  process.cc  style.css  utils.cc  versions.cc  window.cc
src/alpm/: config.cc  handle.cc  meson.build
src/app/: app.cc  base_tab.cc  config.cc  dialog.cc  logger.cc  main.cc  meson.build  package.cc  sidebar.cc  tab.cc  utils.cc
src/app/package/: card.cc  client.cc  tab.cc
src/app/sidebar/: item.cc  meson.build  widget.cc
src/app/tabs/: aur.cc  card.cc  meson.build
src/backend/: main.cc  meson.build
src/cli/: alpm.cc  cli.cc  meson.build
src/frontend/: aur.cc  client.cc  git.cc  main.cc  meson.build  window.cc
src/frontend/http/: client.cc
src/frontend/widgets/: meson.build  searchbar.cc
src/http/: meson.build  transfer.cc
src/package/: card.cc  tab.cc
src/shared/: meson.build
src/shared/alpm/: async.cc  config.cc  handle.cc  meson.build
src/tabs/: packages.cc
src/widgets/: searchbar.cc
subdirs/aurgh/: meson.build
subdirs/aurgh/include/: config.hh  data.hh  logger.hh  types.hh
subdirs/aurgh/include/package/: card.hh  client.hh  tab.hh  type.hh
subdirs/aurgh/src/: aur_client.cc  config.cc  logger.cc  main.cc
subdirs/aurgh/src/package/: card.cc  client.cc  tab.cc
subdirs/helper/include/: alpm.hh
subdirs/helper/src/: log.cc  main.cc
subdirs/shared/include/: arg_parser.hh  utils.hh
subdirs/shared/src/: arg_parser.cc  utils.cc
subprojects/: .gitignore  blueprint-compiler.wrap
ui/: dialog.xml  meson.build  style.css  tab.xml  window.blp  window.xml
ui/gtk3/: card.xml  tab.xml
ui/gtk4/: card.xml  tab.xml
ui/package/: card.xml  tab.xml
ui/tabs/: aur.xml
